--- a/_posts/2023-03-28-INITIUM-邱师仪-蔡英文-麦卡锡会面层级-将成中共必须习惯的新常态.html
+++ b/_posts/2023-03-28-INITIUM-邱师仪-蔡英文-麦卡锡会面层级-将成中共必须习惯的新常态.html
@@ -8,35 +8,22 @@ tags: blog
 author: 邱师仪
 ---
 
-<p>「中共必须要适应这样强度的台美互访；而一旦把动态平衡的战线拖长，时间就不一定不会站在自由世界的这边。」</p><p>邱师仪</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230329-opinion-taiwan-tsai-ing-wen-us-visit/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/a47b81c735c745d48b73402ed251569e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月7日，美国华盛顿，美国总统拜登在发表国情咨文前，美国众议院议长麦卡锡在众议院内。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「中共必须要适应这样强度的台美互访，而一旦把动态平衡的战线拖长，时间就不一定不会站在自由世界的这边。」</p><p>邱师仪</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230329-opinion-taiwan-tsai-ing-wen-us-visit/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/a47b81c735c745d48b73402ed251569e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月7日，美国华盛顿，美国总统拜登在发表国情咨文前，美国众议院议长麦卡锡在众议院内。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2023年2月7日，美国华盛顿，美国总统拜登在发表国情咨文前，美国众议院议长麦卡锡在众议院内。<span class="credit">摄：Elizabeth Frantz/Reuters/达志影像</span></figcaption></figure><p><small>【编者按】台湾总统蔡英文民主共荣之旅自29日启程，去程过境美国纽约、再依序访问中美洲瓜地马拉、贝里斯两友邦，返程过境洛杉矶，期间拟与选区位于加州的众议院院长麦卡锡会唔。</small></p>
-<p><samll>麦卡锡原预计将于春季造访台湾，如成行，将是继佩洛西2022年8月来台后再度访台的众院院长，但最终双方拟在蔡英文总统4月5日过境洛杉矶时与麦卡锡会唔。</samll></p>
-<p><samll>麦卡锡如何崛起？其议长之路如何与川普紧密相关？即便麦卡锡此前曾表示他不认为中国可以命令他去哪里访问，但共和党的极右派成员始终质疑麦卡锡不够「右」。但是，做为选了15轮才选上的「弱势议长」而言，他是否此后会积极抗中以「补血」，即为关注重点。</samll></p>
-<p><samll>对蔡英文而言，除为避免台海情势升温，面临2024台湾总统大选将届，此次将与麦卡锡的会唔改至美国，又有哪些「暗盘」呢？</samll></p>
+<p><small>麦卡锡原预计于春季造访台湾，如成行，将是继佩洛西2022年8月来台后再度访台的众院院长，但最终双方拟在蔡英文总统4月5日返程过境美国时与麦卡锡在洛杉矶会唔。</small></p>
+<p><small>麦卡锡如何崛起？其议长之路如何与川普紧密相关？即便麦卡锡此前曾表示他不认为中国可以命令他去哪里访问，但共和党的极右派成员始终质疑麦卡锡不够「右」；做为选了15轮才选上的「弱势议长」来说，此后他是否会积极抗中以「补血」，即为关注重点。</small></p>
+<p><small>对蔡英文而言，除为避免台海情势升温，面临2024台湾总统大选将届，此次将与麦卡锡的会唔改至美国，又有哪些「暗盘」呢？</small></p>
 <p><strong>（邱师仪，台湾东海大学政治系教授）</strong></p>
- 
- 
- 
+<p>记得去（2022）年底美国总统拜登（Joe Biden）与习近平在印尼峇里岛的会面中，美中之间一度瀰漫着和解气息，当时笔者即<a href="https://tw.news.yahoo.com/news/%E5%90%8D%E5%AE%B6%E8%AB%96%E5%A3%87-%E9%82%B1%E5%B8%AB%E5%84%80-%E6%8B%9C%E7%BF%92%E5%85%88%E7%A6%AE%E5%BE%8C%E5%85%B5-144018930.html">分析</a>就现阶段的美中竞争结构而言，就算拜习是旧识，短期之内可以有些善意互动，但就中长期而言，美中一定是分道扬镳。而且越接近2024年美国大选，美中之间的冲突将会越来越激烈，甚至不会输给川普（Donald Trump）时期的美中对峙关係。而拜登极力让美中竞争不要失控，他一直宣称要替这个竞争加装护栏（guardrail）。儘管如此，美中关係从去年开始上上下下，大体而言还是往交恶的方向发展。<br><br>先是去年8月的佩洛西（Nancy Pelosi）访台，中共随即在台湾海域周遭进行<a href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/">围岛军演</a>，然后到了去年11月15日在峇里岛G20会议中拜习终于见面，这是习近平在中国「一统天下」并开始第三任任期后的一场会议。会议中习似乎有了自信，这时候美中紧张关係稍微和缓，但也没持续太久。今年初的<a href="https://theinitium.com/article/20230218-opinion-china-spy-balloon/">中国侦蒐气球</a>出现在美国本土上空，让拜习关係又立刻变酸，让布林肯（Antony Blinken）的访中计画也因为中国气球事件而取消。<br><br>接下来就是本文要谈的主题：蔡英文过境美国、并将与众院议长麦卡锡（Kevin McCarthy）会面。比起麦卡锡访台，蔡麦在美国见面是否让中共反弹小一点，美台双方还在评估中，但随即又传出拜登为了安抚北京，打算让贺锦丽（Kamala Harris）访中。<br><br>近几个礼拜，在美中对峙、台湾偏向美国的现况下，先是传出太平洋小岛国家密克罗尼西亚（Federated States of Micronesia）<a href="https://www.cna.com.tw/news/aipl/202303100128.aspx">倒向台湾</a>，将与中国的建交关係改向与台湾建交。本月26日，与台湾建交83年的<a href="https://www.mirrormedia.mg/story/20230326edi005/">宏都拉斯与台湾断交</a>，可以看出中共在蔡麦会之前所祭出的惩罚手段。<br><br>目前拜登对于「对中硬软交错」的策略看似是满意的，至少去年11月的期中选举，在通膨失控引发民怨而导致拜登民调低迷的情况下，结果还是比预期的好，至少民主党仍控制了参议院。儘管在2021年7月美军匆促撤出阿富汗，眼睁睁地看着塔利班进驻，让拜登的软弱外交饱受批评，但选民似乎也还没急着要用力地惩罚拜登。<br><br>而拜登这种软硬兼施围堵中国的手法，不管是截断包括台积电等可能提供给中国的晶片；或者是联合美日印澳菲等盟友对中国的围堵——尤其是军事围堵，包括联合军演，也包括在接下来几年将第三海军陆战队陆战团（Marine Littoral Regiment）移防至日本等——或者在经济上大幅降低美国及盟友对中国的原料依赖，譬如製作锂电池的锂，也加速让西方国家的企业都迁出中国等。换言之，拜登要扯断中国的红色供应链，这些目前看起来都很成功。</p>
+<p>以上这些描述皆为民主党、行政部门与拜登这一端的对中动态，然而在共和党、立法部门与麦卡锡这一端也不遑多让。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230329-opinion-taiwan-tsai-ing-wen-us-visit/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/de9af8dbb85f4a20ac34a82fc7ab36c3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年1月4日，华盛顿特区白宫玫瑰园，总统特朗普与众议员麦卡锡一起发表讲话。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2019年1月4日，华盛顿特区白宫玫瑰园，总统特朗普与众议员麦卡锡一起发表讲话。<span class="credit">摄：Alex Wong/Getty Images</span></figcaption></figure>
 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
+<h2>麦卡锡的议长之路与川普紧密相关</h2>
+<blockquote>
+<p>麦卡锡骨子里可能顶多就是中庸右，是比较偏照顾国内中小企业主的那种右，中国议题对他来说也许过去真的不在雷达搜寻范围之内。</p>
+</blockquote>
+<p>出生于1965年的麦卡锡，是一个中产阶级家庭三个孩子中的老么，母亲是家庭主妇，父亲则是助理消防局长。他在加州中南部大城贝克斯菲尔德（College Heights）长大。麦卡锡高中毕业后读了一阵子的社区大学。同时他也在洛杉矶拍卖场买了一台汽车，翻新后再出售，赚了一些钱。</p>
  
  
  
@@ -54,6 +41,13 @@ author: 邱师仪
  
  
  
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 
  
  
@@ -62,10 +56,16 @@ author: 邱师仪
  
  
  
-<p>记得去（2022）年底美国总统拜登（Joe Biden）与习近平在印尼峇里岛的会面中，美中之间一度瀰漫着和解气息，当时笔者即<a href="https://tw.news.yahoo.com/news/%E5%90%8D%E5%AE%B6%E8%AB%96%E5%A3%87-%E9%82%B1%E5%B8%AB%E5%84%80-%E6%8B%9C%E7%BF%92%E5%85%88%E7%A6%AE%E5%BE%8C%E5%85%B5-144018930.html">分析</a>就现阶段的美中竞争结构而言，就算拜习是旧识，短期之内可以有些善意互动，但就中长期而言，美中一定是分道扬镳。而且越接近2024年美国大选，美中之间的冲突将会越来越激烈，甚至不会输给川普（Donald Trump）时期的美中对峙关係。而拜登极力让美中竞争不要失控，他一直宣称要替这个竞争加装护栏（guardrail）。儘管如此，美中关係从去年开始上上下下，大体而言还是往交恶的方向发展。<br><br>先是去年8月的佩洛西（Nancy Pelosi）访台，中共随即在台湾海域周遭进行<a href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/">围岛军演</a>，然后到了去年11月15日在峇里岛G20会议中拜习终于见面，这是习近平在中国「一统天下」并开始第三任任期后的一场会议。会议中习似乎有了自信，这时候美中紧张关係稍微和缓，但也没持续太久。今年初的<a href="https://theinitium.com/article/20230218-opinion-china-spy-balloon/">中国侦蒐气球</a>出现在美国本土上空，让拜习关係又立刻变酸，让布林肯（Antony Blinken）的访中计画也因为中国气球事件而取消。<br><br>接下来就是本文要谈的主题：蔡英文过境美国、并将与众院议长麦卡锡（Kevin McCarthy）会面。比起麦卡锡访台，蔡麦在美国见面是否让中共反弹小一点，美台双方还在评估中，但随即又传出拜登为了安抚北京，打算让贺锦丽（Kamala Harris）访中。<br><br>近几个礼拜，在美中对峙、台湾偏向美国的现况下，先是传出太平洋小岛国家密克罗尼西亚（Federated States of Micronesia）<a href="https://www.cna.com.tw/news/aipl/202303100128.aspx">倒向台湾</a>，将与中国的建交关係改向与台湾建交。本月26日，与台湾建交83年的<a href="https://www.mirrormedia.mg/story/20230326edi005/">宏都拉斯与台湾断交</a>，可以看出中共在蔡麦会之前所祭出的惩罚手段。<br><br>目前拜登对于「对中硬软交错」的策略看似是满意的，至少去年11月的期中选举，在通膨失控引发民怨而导致拜登民调低迷的情况下，结果还是比预期的好，至少民主党仍控制了参议院。儘管在2021年7月美军匆促撤出阿富汗，眼睁睁地看着塔利班进驻，让拜登的软弱外交饱受批评，但选民似乎也还没急着要用力地惩罚拜登。<br><br>而拜登这种软硬兼施围堵中国的手法，不管是截断包括台积电等可能提供给中国的晶片；或者是联合美日印澳菲等盟友对中国的围堵——尤其是军事围堵，包括联合军演，也包括在接下来几年将第三海军陆战队陆战团（Marine Littoral Regiment）移防至日本等——或者在经济上大幅降低美国及盟友对中国的原料依赖，譬如製作锂电池的锂，也加速让西方国家的企业都迁出中国等。换言之，拜登要扯断中国的红色供应链，这些目前看起来都很成功。</p><p>以上这些描述皆为民主党、行政部门与拜登这一端的对中动态，然而在共和党、立法部门与麦卡锡这一端也不遑多让。</p><p><a class="image" href="https://theinitium.com/article/20230329-opinion-taiwan-tsai-ing-wen-us-visit/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/de9af8dbb85f4a20ac34a82fc7ab36c3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年1月4日，华盛顿特区白宫玫瑰园，总统特朗普与众议员麦卡锡一起发表讲话。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            </p><figcaption itemprop="caption">2019年1月4日，华盛顿特区白宫玫瑰园，总统特朗普与众议员麦卡锡一起发表讲话。<span class="credit">摄：Alex Wong/Getty Images</span></figcaption><p></p><p>麦卡锡的议长之路与川普紧密相关</p><p>
-</p><p>麦卡锡骨子里可能顶多就是中庸右，是比较偏照顾国内中小企业主的那种右，中国议题对他来说也许过去真的不在雷达搜寻范围之内。</p>
-<p></p><p>出生于1965年的麦卡锡，是一个中产阶级家庭三个孩子中的老么，母亲是家庭主妇，父亲则是助理消防局长。他在加州中南部大城贝克斯菲尔德（College Heights）长大。麦卡锡高中毕业后读了一阵子的社区大学。同时他也在洛杉矶拍卖场买了一台汽车，翻新后再出售，赚了一些钱。</p><p>1984时年仅20岁的他买了一张乐透彩，中了5,000美元。此事是外界在谈起麦卡锡从政之路时最常提到的故事。麦卡锡将获得的奖金拿来玩股票，又赚了钱，然后买下一间原本是叔叔拥有的小店，名为Kevin O's Deli。赚了钱的麦卡锡感受到资本市场的魅力，选择从大学休学。这一段生命经历对麦卡锡来说至关重要，也让他在后来踏上从政生涯后时常提到中小企业为美国社会的基石。</p><p>一直到1985年，麦卡锡才又卖掉公司，并回到学校把大学学历完成，1994年再从加州州立大学克斯菲尔德分校（California State University, Bakersfield）拿到商业管理硕士。他在学校中认识了共和党众议员汤玛士（Bill Thomas），从那时候开始，麦卡锡即担任汤玛士的议员助理，一直到2006年汤玛士退休为止。麦卡锡接替他的老闆投入原选区，初啼试声就获得逾七成选票当选。从2006年至2020年，麦一直都顺利连任。从政之路上，麦卡锡跟随前辈、2001年即当选维吉尼亚州众议员的康特（Eric Cantor）。</p><p>就当2010年茶党运动爆发，共和党控制了众院多数，而康特也当选共和党多数党领袖（议长是贝纳[John Boehner]），麦卡锡跟着担任多数党党鞭。2014年麦卡锡升任为众院多数党领袖，并开始有竞选议长的野心，但在2016年麦疑似有婚外情而被党内保守派质疑。同时，由于「<a href="https://zh.wikipedia.org/zh-tw/%E7%8F%AD%E5%8A%A0%E8%A5%BF%E4%BA%8B%E4%BB%B6">利比亚班加西美国外交官遭杀害事件</a>」，党内也开始斗争麦卡锡，最终2016年由莱恩（Paul Ryan）担任议长。</p><p>川普入主白宫之后，莱恩议长与川普的关係不睦，但麦卡锡很快变成川普的战友，替川普辩护了许多关键作为，包括2016年总统大选时，麦主张俄国并未以假讯息介入川普与希拉蕊（Hillary Clinton）之间的选战等。麦卡锡作为川粉议员的一员，关係维持的不错，要一直到2021年1月6日川粉火攻国会后，他告诉共和党同僚他希望川普承认败选，麦川关係才开始变酸。</p><p>当麦卡锡在时任民主党议长佩洛西成立委员会调查<a href="https://global.udn.com/global_vision/story/8662/5158674">川粉火攻国会</a>时，提出两个加入该委员会的共和党人选，但都被佩洛西拒绝，麦当时认为这是奇耻大辱，并宣布共和党全面退出该委员会的调查。整件事情还衍生出两个反川的建制派共和党众议员金辛格（Adam Kinzinger）与钱尼（Liz Cheney），因为不听从麦的指挥而遭到共和党中央拔除党职。然而，当时川普对于麦下令「共和党全部退出的决定」并不领情，还批评就是因为调查委员会中没有共和党的声音，才会导致后来的调查结果对川普不利。</p><p><a href="https://theinitium.com/tags/2022_9/">2022年期中选举</a>之后，共和党虽未如预期拿下参众两院，但还是拿下众院多数。麦卡锡见选议长的时机成熟了，儘管在分裂的共和党内部，有不少共和党众议员并不支持麦。2023年1月，麦正式由共和党推荐参选议长，但经过15轮折腾的投票才勉强当选，当时原本有20位来自于「自由党团」（freedom caucus）极右派的共和党员不支持麦。经过14轮投票，最终在六位原本反对麦卡锡的共和党员投下了「出席但弃权」票（present）后，才降低了麦卡锡的当选门槛，让他勉强过关。</p><p>麦卡锡是自1923年以来首位第一轮投票没有赢得议长宝座的议长候选人，也是自1859年以来议长选到最多轮的议长候选人，1859年那次议长共选了44轮。此外，这个窘境也是因为共和党虽然赢得众院，但赢得不够多。新任的118届国会（2023至2025年），共和党有222席，民主党小输还有212席，另加一席出缺。最终麦卡锡卡关的原因，还是因川普而起，极右众议员认为麦卡锡不够右，不够支持小政府与低税率，甚至在川粉火攻国会的事件上，还曾经主张要举办听证会调查川普。</p><p><a class="image" href="https://theinitium.com/article/20230329-opinion-taiwan-tsai-ing-wen-us-visit/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/9d237ebfdc7a43df8d82934e3c23a121.jpg?imageView2/1/w/1080/h/720/format/jpg" alt=" 2023年3月10日，美国华盛顿，众议院议长麦卡锡在美国国会大厦举办法案登记仪式。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>1984时年仅20岁的他买了一张乐透彩，中了5,000美元。此事是外界在谈起麦卡锡从政之路时最常提到的故事。麦卡锡将获得的奖金拿来玩股票，又赚了钱，然后买下一间原本是叔叔拥有的小店，名为Kevin O's Deli。赚了钱的麦卡锡感受到资本市场的魅力，选择从大学休学。这一段生命经历对麦卡锡来说至关重要，也让他在后来踏上从政生涯后时常提到中小企业为美国社会的基石。</p><p>一直到1985年，麦卡锡才又卖掉公司，并回到学校把大学学历完成，1994年再从加州州立大学克斯菲尔德分校（California State University, Bakersfield）拿到商业管理硕士。他在学校中认识了共和党众议员汤玛士（Bill Thomas），从那时候开始，麦卡锡即担任汤玛士的议员助理，一直到2006年汤玛士退休为止。麦卡锡接替他的老闆投入原选区，初啼试声就获得逾七成选票当选。从2006年至2020年，麦一直都顺利连任。从政之路上，麦卡锡跟随前辈、2001年即当选维吉尼亚州众议员的康特（Eric Cantor）。</p><p>就当2010年茶党运动爆发，共和党控制了众院多数，而康特也当选共和党多数党领袖（议长是贝纳[John Boehner]），麦卡锡跟着担任多数党党鞭。2014年麦卡锡升任为众院多数党领袖，并开始有竞选议长的野心，但在2016年麦疑似有婚外情而被党内保守派质疑。同时，由于「<a href="https://zh.wikipedia.org/zh-tw/%E7%8F%AD%E5%8A%A0%E8%A5%BF%E4%BA%8B%E4%BB%B6">利比亚班加西美国外交官遭杀害事件</a>」，党内也开始斗争麦卡锡，最终2016年由莱恩（Paul Ryan）担任议长。</p><p>川普入主白宫之后，莱恩议长与川普的关係不睦，但麦卡锡很快变成川普的战友，替川普辩护了许多关键作为，包括2016年总统大选时，麦主张俄国并未以假讯息介入川普与希拉蕊（Hillary Clinton）之间的选战等。麦卡锡作为川粉议员的一员，关係维持的不错，要一直到2021年1月6日川粉火攻国会后，他告诉共和党同僚他希望川普承认败选，麦川关係才开始变酸。</p><p>当麦卡锡在时任民主党议长佩洛西成立委员会调查<a href="https://global.udn.com/global_vision/story/8662/5158674">川粉火攻国会</a>时，提出两个加入该委员会的共和党人选，但都被佩洛西拒绝，麦当时认为这是奇耻大辱，并宣布共和党全面退出该委员会的调查。整件事情还衍生出两个反川的建制派共和党众议员金辛格（Adam Kinzinger）与钱尼（Liz Cheney），因为不听从麦的指挥而遭到共和党中央拔除党职。然而，当时川普对于麦下令「共和党全部退出的决定」并不领情，还批评就是因为调查委员会中没有共和党的声音，才会导致后来的调查结果对川普不利。</p><p><a href="https://theinitium.com/tags/2022_9/">2022年期中选举</a>之后，共和党虽未如预期拿下参众两院，但还是拿下众院多数。麦卡锡见选议长的时机成熟了，儘管在分裂的共和党内部，有不少共和党众议员并不支持麦。2023年1月，麦正式由共和党推荐参选议长，但经过15轮折腾的投票才勉强当选，当时原本有20位来自于「自由党团」（freedom caucus）极右派的共和党员不支持麦。经过14轮投票，最终在六位原本反对麦卡锡的共和党员投下了「出席但弃权」票（present）后，才降低了麦卡锡的当选门槛，让他勉强过关。</p><p>麦卡锡是自1923年以来首位第一轮投票没有赢得议长宝座的议长候选人，也是自1859年以来议长选到最多轮的议长候选人，1859年那次议长共选了44轮。此外，这个窘境也是因为共和党虽然赢得众院，但赢得不够多。新任的118届国会（2023至2025年），共和党有222席，民主党小输还有212席，另加一席出缺。最终麦卡锡卡关的原因，还是因川普而起，极右众议员认为麦卡锡不够右，不够支持小政府与低税率，甚至在川粉火攻国会的事件上，还曾经主张要举办听证会调查川普。</p><p><a class="image" href="https://theinitium.com/article/20230329-opinion-taiwan-tsai-ing-wen-us-visit/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/9d237ebfdc7a43df8d82934e3c23a121.jpg?imageView2/1/w/1080/h/720/format/jpg" alt=" 2023年3月10日，美国华盛顿，众议院议长麦卡锡在美国国会大厦举办法案登记仪式。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             </p><figcaption itemprop="caption"> 2023年3月10日，美国华盛顿，众议院议长麦卡锡在美国国会大厦举办法案登记仪式。<span class="credit">摄：Evelyn Hockstein/Reuters/达志影像</span></figcaption><p></p><p>培养麦卡锡抗中的土壤</p><p>
 </p><p>从台湾人的观点来看，就算麦卡锡本身可能并非真诚抗中，但培养他抗中的土壤会让他抗中越来越认真，尤其选了15轮才选上议长，他无疑是一个弱势议长。</p>
 <p></p><p>比起已经抗中几十年的前议长佩洛西，麦卡锡比较找不到早期的抗中轨迹。整体来看，麦抗中的工具性较强，抗中可以让他看起来像个川粉，也许可以安抚部分自由党团极右的共和党议员。</p><p>麦卡锡在2016年之前，几乎没有什麽反中提案或发言纪录，外界对于麦卡锡最有印象的反中发言，是在2022年7月26日于佩洛西8月2日访台前所说：「如果将来我当选议长，我也会乐意访问台湾。」而在议长选举时，麦最后能够勉强选上的原因之一，是他对极右的共和党同僚保证，他当选后一定会成立打击中共的特别委员会。</p><p>诚然，自由党团的创立者、来自于俄亥俄州的众议员乔丹（Jim Jordan），即是反中到一个新境界的头号大将。他于2022年提出「武汉肺炎病毒源于武汉实验室，但白宫首席防疫专家佛奇（Anthony Fauci）知情却隐瞒」，各界一般称乔丹的论述为「佛奇中国阴谋论」（Fauci-China conspiracy）。麦卡锡为了答应乔丹对于抗中会做点什麽，上任后第一个动作即任命由威斯康辛州来的众议员盖拉格（Mike Gallagher）成立「中国特别委员会」，虽然国会两党抗中的大方向的确有共识，但仍有三分之一的民主党员反对这个委员会的设立。这里涉及到党派间的算计，对于民主党来说，共和党操纵反中的手法太过激也太有目的性，包括这个委员会是否又要搞「佛奇中国阴谋论」来斗争民主党？是否也想藉由这个委员，将美国人对于川普指使国会暴乱的责任注意力转移到中国身上？</p><p>或者，民主党害怕的其实是：麦卡锡与共和党众议员如果把抗中搞得有声有色，可能就能夺去拜登政府对中政策的主导权，譬如拜登当局对于全盘禁「字节跳动」（ByteDance）产品TikTok仍有迟疑，但对于盖拉格来说，早已准备了几套要把字节跳动赶出美国的立法方案。</p><p>然而，对于更为左倾的激进派民主党参众议员来说，他们其实想要有自己的外交政策论述，一个不同于围堵崛起中的中国与协助乌克兰对抗普丁的外交主轴；就这两个美国人最熟知的议题而言，共和党的确表现得比民主党好。</p><p>另一方面，对于共和党来说，他们也时常嫌弃民主党对中软弱，甚至姑息中共迫害人权的纪录。去年盖拉格就批评拜登在G20峰会上，错失了一个就台湾问题对习近平施压的绝佳机会；也指控当中国正在备战，行政当局却给美国民众一种「美国还是很安全」的错误认知。</p><p>回到激进民主党参众议员，那到底什麽是他们自己想要另闢蹊径的外交议题？非常弔诡的是在这块上面，他们的论述恰恰与极右派共和党员有重叠，英文成为「两群在意识形态上迥异却愿意同床的伙伴」(strange bedfellows)，那就是他们都想要「削减海外军事预算」。</p><p>「激进左」主张，如果美国不断的提高海外军事预算而导致美国军国主义横行，那就肥了那些本来就已经很猖狂的国会游说团体与军火商。激进左与相关媒体甚至揶揄麦卡锡当选议长，是1950年代麦卡锡反共主义的復辟，现在美国正处于「麦卡锡主义2.0」时代。因此，激进左与极右参众议员都在督促拜登，美国在乌克兰身上花了太多钱，同时这两群人也不想要再援助沙乌地阿拉伯打叶门。这类的激进左包括如纽约州参议员华伦（Elizabeth Warren）与康乃迪克州莫非（Chris Murphy），而这类的「极右派」则包括俄亥俄州参议员凡斯（J. D. Vance）。</p><p>总之，这两种完全不相容的意识形态却都有美国建国以来非常常见的「外交孤立主义」思想。反而是「中庸左」的民主党员对于中国还愿意保持围堵，对于普丁还愿意投入资源制裁，而这些「中庸左」刚好就是总统拜登、国务卿布林肯与国安顾问苏利文等人。</p><p>读到这里，有人可能会好奇：前面提及自由党团的极右共和党员如乔丹仍旧反中，但为何这一类人同时又想要外交孤立，可能不想在台湾身上投资军事资源以抗中？这的确是这一派人很矛盾的地方，但也可以说他们其实不矛盾。矛盾是因为美国如果不投入资源，其实围中抗俄最后顶多是口惠而实不至；但不矛盾的是，极右共和党员有时就像是川普的一边脑，他们想要了解万恶的共产党，所以先成立特别委员会来研究研究，他们可以藉由召开听证会、蒐集情资彻底了解中共之后，最后缩回美国本土把大门深锁、安全顾好就好。</p><p>也可以说，对于抗中议题，其实极右派内部的处理方式是有分歧的，但极右派对于缩减联邦政府的支出（包括军费支出）绝对有共识，不但有共识且是从2010年茶党运动以来全力在推动的国家发展方向。至于麦卡锡，也许因为大张旗鼓抗中比较能够吸引媒体注意，在政治宣传上也很直观，所以麦卡锡比较偏向会投入资源抗中的那种保守派。其实从十年前麦想在众院共和党团往上爬开始，真正的极右派成员就一直质疑麦卡锡不够右，更称不上诚恳，因此麦卡锡骨子里可能顶多就是中庸右，是比较偏照顾国内中小企业主的那种右，中国议题对他来说也许过去真的不在雷达搜寻范围之内。</p><p>至于麦卡锡任命为特别委员会的盖拉格，年仅39岁并且有国际关係的博士学位，其抗中思想是有一套理论体系的，抗中的经验也比起麦卡锡深且完整，盖拉格2017年时才初任众议员，就已经有不少反中的提案与言论纪录了。因此从台湾人的观点来看，就算麦卡锡本身可能并非真诚抗中，但培养他抗中的土壤会让他抗中越来越认真，尤其选了15轮才选上议长，他无疑是一个弱势议长。因此，为了要提高他的路线纯粹度，他会用各种可能的手段来帮自己「补血」。换言之，麦卡锡抗中在顺风向时，他可能会用的「超级用力」。</p><p><a class="image" href="https://theinitium.com/article/20230329-opinion-taiwan-tsai-ing-wen-us-visit/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/22f9592e5e354c7f928c1f8721624a8d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月3日，台北，美国众议院议长佩洛西拜访台湾立法院。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
