--- a/_posts/2023-03-29-INMEDIA-廣州城涉欠薪遭dq中超資格-陳俊樂料需另覓新東家.html
+++ b/_posts/2023-03-29-INMEDIA-廣州城涉欠薪遭dq中超資格-陳俊樂料需另覓新東家.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/u89w481ey8" title="92671ddegy1h65cmqj45tj23282aoe82"><img src="https://live.staticflickr.com/65535/52778871854_0606bf9014_b.jpg" width="1024" alt="92671ddegy1h65cmqj45tj23282aoe82" /></a><br /><em>微博圖片</em></p>
 <p>國內傳媒報道，8支球隊涉及未償還債務，包括拖欠薪金，或未有向中國足協提交「准入」。不過，早前多次傳出欠薪的廣州隊、深圳隊則暫時過關，來季將分別出戰中甲及中超賽事。在消息傳出後，有廣州城球迷今早到球隊主場越秀山體育場獻花。</p>
 <p>此外，有內媒就不點名指，有球隊拖欠多名球員至少千萬元薪金，但以自由身作「交換」，以換取他們放棄追薪，從而通過「中超准入」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/EdC02FWN7X" title="92671ddegy1h4r5qi3kq2j24802tckjp"><img src="https://live.staticflickr.com/65535/52779096498_7cfca67045_b.jpg" width="1024" alt="92671ddegy1h4r5qi3kq2j24802tckjp" /></a><br /><em>微博圖片</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/b2mQ8ebuy9" title="無標題"><img src="https://live.staticflickr.com/65535/52779453753_3be439f35b_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>富力入主後曾晉身亞冠  聘名帥包括史杜高域</strong></p>
 <p>廣州城的前身為在1986年成立的瀋陽足球隊，2001年獲金德集團入主，2007年將主場搬到長沙，在2011年賣盤予美資公司，再搬到深圳市及易命深圳鳳凰。球隊命途多舛，同年再出現財政困難，被內房上市公司富力地產收購。</p>
 <p>在富力地產入主後，球隊使用越秀山球場為主場，主張「南派足球」，踢法實而不華，在2014年拿下中超季軍，攀上歷來最高點。廣州富力翌年晉身亞冠分組賽，更與廣州恒大「同市光榮」，令廣州市成為中國首個城市擁有兩支亞冠球隊。</p>
@@ -26,4 +26,9 @@ author: 獨媒報導
 <p>陣中的香港港球員、27歲的陳俊樂在2018年北上，加盟當時的廣州富力，被外借到港超聯球隊富力R&amp;F。他在2019年球季重返廣州富力，同年10月為球隊上陣，成為繼吳偉超後第二名香港球員在中超賽場比賽。</p>
 <p>然而，廣州城去季雖然成功護級，但球隊的股權轉換一直未有進展，而廣州市足協在廣州省運會假波案後，遭中國足協暫停會員資格。</p>
 <p>而陳俊樂在去季季尾受傷，在完成半月板手術後返港休息。陳俊樂在今年1月曾出席足總的菁英盃記者會，他當時指內地足球的大環境較難，而球隊正進行股權轉換，希望在新投資者入主後會有更好發展；他早前亦未有入選港隊名單。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/sd06K01jfD" title="無標題"><img src="https://live.staticflickr.com/65535/52778444132_36a6dd12a2_b.jpg" width="1024" alt="無標題" /></a></p>
+<p><strong>廣州城即日起暫停營運：已無愧於中國足球</strong></p>
+<p>廣州城傍晚發聲明，稱經慎重決定，各級球隊即日起暫停營運。聲明指，自2021年開始，受疫情及經濟因素「叠加影響」，球隊及投資人富力集團出現經營困難，去季有賴市政府、社會各界、職球員的努力下，才能成功護級。</p>
+<p>對於停運，球隊解釋稱，今季在解決歷史債務的過程中，富力集團和球隊在極其困難的情況下，依然湊出有限的資金期望與球員達成和解，但令人遺憾的是由於各種因素影響，最終未能與部份球員達成一致，無法通過「中超准入」。</p>
+<p>廣州城形容，縱有萬般不捨，但不得不做出暫停營運的決定，表示會繼續展開善後工作，希望所有債權人能給予理解與支持。球隊最後表示，即使因經營困難而退出職業聯賽，但已無愧於中國足球。</p>
 </div></div></div>
