--- a/_posts/2023-03-29-INMEDIA-豐美股肥-兩短片被電檢處拒公映-艙-涉疫情-示威被指-上映不利於國家安全.html
+++ b/_posts/2023-03-29-INMEDIA-豐美股肥-兩短片被電檢處拒公映-艙-涉疫情-示威被指-上映不利於國家安全.html
@@ -8,16 +8,16 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202303293_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>由3名香港導演創辦的電影創作平台「豐美股肥」將於4月在兆基創意書院舉行放映會，惟陳力行及葉文希執導的《艙》以及任俠執導的《股肥肆仆街》，因不過電檢被抽起。電檢處回信指，《艙》片中的疫情、示威和囚禁的影像和聲音，「導致影片的上映會不利於國家安全」而拒批申請。導演陳力行不認同短片違反國安法，認為「佢哋（電檢處）諗多咗」，又稱片中的頭盔與抗爭無關，對頭盔有煽動之意感到無稽。電影、報刊及物品管理辦事處回覆《獨媒》，指不會就個別影片的申請及檢片決定作評論。</p>
+<img src="https://www.inmediahk.net/files/column_images/202303293%E6%8B%B7%E8%B2%9D.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>由3名香港導演創辦的電影創作平台「豐美股肥」將於4月在兆基創意書院舉行放映會，惟陳力行及葉文希執導的《艙》以及任俠執導的《股肥肆仆街》，因不過電檢被抽起。電檢處回信指，《艙》片中的疫情、示威和囚禁的影像和聲音，「導致影片的上映會不利於國家安全」而拒批申請。導演陳力行不認同短片違反國安法，認為「佢哋（電檢處）諗多咗」，又稱片中的頭盔與抗爭無關，對頭盔有煽動之意感到無稽。電影、報刊及物品管理辦事處回覆《獨媒》，指不會就個別影片的申請及檢片決定作評論。</p>
 <p>《股肥肆仆街》導演任俠引述電檢處指，短片中的演員以真名演出，與所述的「純屬虛構」有誤導成分。任俠表示將公開交代事件，但認為已跟足規矩，「有幾荒謬係佢哋問題」。</p>
 <p><strong>《艙》、《股肥肆仆街》放映會抽起 改放《一Pair囡》及《於是我安靜了》</strong></p>
 <p>由香港導演任俠、陳力行及陳浩勤創辦的「豐美股肥」（Phone Made Good Film）聯同「港產電影保育計劃」將於4月22日，在兆基創意書院舉行名為《散‧敍》的放映大會。放映會長約三個半小時，共放映11段短片，分「迷失」和「出走」兩個主題。主題「迷失」原本放映6套短片，包括《失樂園》 、《甜點》、《過火 》、《夢遊 》、《艙》及《起筷 》；主題「出走」原本放映5套短片，包括《脫序》、 《斜陽》、《Cupid Rosewood is 14 years old》、《鵲橋歸路》及《股肥肆仆街》。</p>
 <p>但「豐美股肥」<a href="https://www.instagram.com/p/CqScpe7v3GO/?utm_source=ig_web_copy_link">近日</a>稱，收到電影、報刊及物品管理辦事處通知，根據《電影檢查條例》為由，拒絕核准由陳力行及葉文希執導的《艙》以及由任俠執導的《股肥肆仆街》上映。該兩段短片將在放映會抽起，改為放映《一Pair囡》及《於是我安靜了》。</p>
 <p><strong>電檢處修改影片不足以解決問題 影片不能上映</strong></p>
-<p><a href="https://www.youtube.com/watch?v=gHdjxHO5M-Y">《艙》片長逾16分鐘</a>，導演為陳力行。簡介指「病人送進『艙』隔離並躺平生活，卻逐漸意識到那是囚禁靈魂的監獄。」陳力行向《獨媒》表示，是次為《艙》的首次放映，結果送檢約3個月才獲電檢處書信回覆，最後因 「不利國家安全」拒批准映證。</p>
-<p>陳力行引電檢處指，影片穿插著與疫情、示威和囚禁有關的影像和聲音，例如片頭一名機師的言論，以及一些有黃色頭盔、示威手勢及聲浪的片段，可能導致觀眾誤信近年社會動盪的失實陳述、對政府和警方無根據的指控，煽動觀眾支持違法示威者。</p>
+<p><a href="https://www.youtube.com/watch?v=gHdjxHO5M-Y">《艙》片長逾16分鐘</a>，導演為陳力行及葉文希。簡介指「病人送進『艙』隔離並躺平生活，卻逐漸意識到那是囚禁靈魂的監獄。」陳力行向《獨媒》表示，是次為《艙》的首次放映，結果送檢約3個月才獲電檢處書信回覆，最後因 「不利國家安全」拒批准映證。</p>
+<p>陳力行引電檢處指，影片穿插著與疫情、示威和囚禁有關的影像和聲音，例如片頭一名機師的言論，以及一些有黃色頭盔、示威手勢及聲浪的片段，可能導致觀眾誤信近年社會動盪的失實陳述、對政府和警方無根據的指控，煽動觀眾支持違法示威者。陳力行再引電檢處指，影片把應急醫院和方艙設施描寫成囚禁，片內亦有疑為內地居民在抗疫期間跳樓的片段，但沒有交代來龍去脈，屬偏頗失實。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Q416ZF1qhr" title="螢幕截圖 2023-03-29 下午3.31.14"><img src="https://live.staticflickr.com/65535/52778933679_656b736af8_b.jpg" alt="螢幕截圖 2023-03-29 下午3.31.14" /></a><br /><em>《艙》截圖</em></p>
-<p>陳力行續引電檢處指，「影片大篇幅內容可能構成美化、認同或宣揚近年社會動盪中違法示威者的非法行為，激起觀眾對內地和香港政府的不滿或憎恨，導致影片的上映會不利於國家安全」。電檢處在信中稱，根據條例及檢查員指引，由於有問題的片段多，修改影片不足以解決問題，認為影片不能上映。</p>
+<p>陳力行續引電檢處稱，「影片大篇幅內容可能構成美化、認同或宣揚近年社會動盪中違法示威者的非法行為，激起觀眾對內地和香港政府的不滿或憎恨，導致影片的上映會不利於國家安全」。陳力行指 ，電檢處在信中稱根據條例及檢查員指引，由於有問題的片段多，修改影片不足以解決問題，認為影片不能上映。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1D8u6947yu" title="螢幕截圖 2023-03-29 下午4.40.22"><img src="https://live.staticflickr.com/65535/52779000844_7c2f3cdf33_b.jpg" alt="螢幕截圖 2023-03-29 下午4.40.22" /></a><br /><em>《艙》截圖</em></p>
 <p>陳力行不認同短片有違反國安法，認為「佢哋諗多咗」。他又指，片中的頭盔只是演員帶備的電單車頭盔，與抗爭無關，又對黃色頭盔有煽動之意的說法感到無稽。</p>
 <p><strong>短片演員以真名演出 導演引電檢處稱誤導「純屬虛構」</strong></p>
