--- a/_posts/2023-03-29-INMEDIA-廣州城涉欠薪遭dq中超資格-陳俊樂料需另覓新東家.html
+++ b/_posts/2023-03-29-INMEDIA-廣州城涉欠薪遭dq中超資格-陳俊樂料需另覓新東家.html
@@ -8,8 +8,8 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20230329k.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>中超金元足球走到盡頭，繼廣州隊降班、武漢長江解散後，另一球隊廣州城亦宣告「玩完」，涉因為欠薪遭DQ中超資格。中國足協今日公布新一季職業聯賽准入名單，廣州城「未獲准入」，來季將不能參加中超聯賽；陣中球員、港隊成員陳俊樂將需要另覓新東家。</p>
-<p>中國足協今早舉行記者會，公布新一季的職業聯賽名單，有8支球隊「未獲准入」，除了廣州城，原定升班中超、應屆中甲冠軍昆山隊亦未能過關，新一季中超將回復至16隊。另外，中甲球隊、早前已解散的武漢長江、河北隊、陝西長安競技、淄博蹴鞠，及中乙球隊北京北體大，及新疆天山雪豹同「未獲准入」。</p>
+<img src="https://www.inmediahk.net/files/column_images/20230329k.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>中超金元足球走到盡頭，繼廣州隊降班、<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E6%8D%B2%E5%85%A5%E6%9D%8E%E9%90%B5%E5%9A%B4%E9%87%8D%E9%81%95%E6%B3%95%E6%A1%88-%E4%B8%AD%E8%B6%85%E7%90%83%E9%9A%8A%E6%AD%A6%E6%BC%A2%E9%95%B7%E6%B1%9F%E5%AE%A3%E5%B8%83%E8%A7%A3%E6%95%A3">武漢長江</a>解散後，另一球隊廣州城亦宣告「玩完」，涉因為欠薪遭DQ中超資格。中國足協今日公布新一季職業聯賽准入名單，廣州城「未獲准入」，來季將不能參加中超聯賽；陣中球員、港隊成員陳俊樂將需要另覓新東家。</p>
+<p>中國足協今早舉行記者會，公布新一季的職業聯賽名單，有8支球隊「未獲准入」，除了廣州城，原定升班中超、應屆中甲冠軍昆山隊亦未能過關，新一季中超將回復至16隊。另外，中甲球隊、早前已解散的武漢長江、<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E4%B8%AD%E8%B6%85%E6%B2%B3%E5%8C%97%E9%9A%8A%E7%90%83%E5%93%A1%E7%99%BC%E5%85%AC%E9%96%8B%E4%BF%A1%E8%BF%BD%E6%AC%A0%E8%96%AA-%E6%8F%AD%E4%B8%AD%E5%9C%8B%E7%90%83%E5%93%A1%E4%B8%89%E5%B9%B4%E4%BE%86%E6%9C%AA%E7%8D%B2%E5%88%86%E6%96%87">河北隊</a>、陝西長安競技、淄博蹴鞠，及中乙球隊北京北體大，及新疆天山雪豹同「未獲准入」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/u89w481ey8" title="92671ddegy1h65cmqj45tj23282aoe82"><img src="https://live.staticflickr.com/65535/52778871854_0606bf9014_b.jpg" width="1024" alt="92671ddegy1h65cmqj45tj23282aoe82" /></a><br /><em>微博圖片</em></p>
 <p>國內傳媒報道，8支球隊涉及未償還債務，包括拖欠薪金，或未有向中國足協提交「准入」。不過，早前多次傳出欠薪的廣州隊、深圳隊則暫時過關，來季將分別出戰中甲及中超賽事。在消息傳出後，有廣州城球迷今早到球隊主場越秀山體育場獻花。</p>
 <p>此外，有內媒就不點名指，有球隊拖欠多名球員至少千萬元薪金，但以自由身作「交換」，以換取他們放棄追薪，從而通過「中超准入」。</p>
