--- a/_posts/2023-03-29-INMEDIA-張秀賢遭債主入稟小額追討3.5萬元-押後至7.3再訊.html
+++ b/_posts/2023-03-29-INMEDIA-張秀賢遭債主入稟小額追討3.5萬元-押後至7.3再訊.html
@@ -8,8 +8,8 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/yin%201280_0.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>前元朗區議員張秀賢<a href="https://bit.ly/3WNq1Di">早前被指借錢唔還</a>，更在社交網站遭多人追債。申索人楊浩泉入稟小額錢債審裁處，向張秀賢追討3.5萬元，今（29日）進行簡短提訊。記者早上在法庭相關樓層等候，惟直至開庭時間卻不見二人現身。據司法機構網站顯示，案件押後至7月3日證案。</p>
-<p>申索人為楊浩泉，被告為張秀賢。申索人向張秀賢追討35,000元的款項及訟費。理由為他曾於去年12月31日及今年1月1日借款35,000元予張秀賢。張曾口頭承諾於今年1月6日前還款，但申索人至今仍未收到任何款項。</p>
+<img src="https://www.inmediahk.net/files/column_images/yin%201280_1.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>前元朗區議員張秀賢<a href="https://bit.ly/3WNq1Di">早前被指借錢唔還</a>，更在社交網站遭多人追債。申索人楊浩泉入稟小額錢債審裁處，向張秀賢追討3.5萬元，今（29日）進行簡短提訊。據司法機構網站顯示，案件押後至7月3日證案。</p>
+<p>申索人為楊浩泉，被告為張秀賢。楊浩泉為前自由黨成員，現時已離開政圈，現從事證券業。申索人向張秀賢追討35,000元的款項及訟費。理由為他曾於去年12月31日及今年1月1日借款35,000元予張秀賢。張曾口頭承諾於今年1月6日前還款，但申索人至今仍未收到任何款項。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/aA5P412n24" title="DSCF0142"><img src="https://live.staticflickr.com/65535/51184436208_cdb1dec086_b.jpg" width="1024" alt="DSCF0142" /></a><br /><em>張秀賢（資料圖片）</em></p>
 <p>近月張秀賢被爆出拖欠政界及社運中人至少逾百萬元。財經專欄作家渾水今年1月在社交媒體不點名稱張秀賢為「很著名借錢不還的債仔」，自己則是債主之一。他指張以各種藉口借錢，例如選舉開支、自己及家人撞車等；又表示相信張政治上已經「變節」。該帖文隨即引來迴響，多人包括漫畫家「阿塗」、政治學者黃偉國等也紛紛留言表示自己是「苦主」，更有人開設群組聲討。</p>
 <p>渾水兩日後再發文指已獲張秀賢聯絡，初步雙方協商好「債務方案」，還款期為約6年，張秀賢每月還約3,000元，並稱已收到第一期款項。</p>
