--- a/_posts/2023-03-29-INMEDIA-新思維籌款晚宴兩應邀官員-甩底-何俊賢送本地雞支持.html
+++ b/_posts/2023-03-29-INMEDIA-新思維籌款晚宴兩應邀官員-甩底-何俊賢送本地雞支持.html
@@ -11,7 +11,7 @@ author: 獨媒報導
 <img src="https://www.inmediahk.net/files/column_images/202303291_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>參選時自稱「非建制派」的新思維昨晚（28日）舉行八週年籌款晚宴，原本答應出席的兩位政府官員臨時「甩底」，惟主席狄志遠認為無須聯想到政治層面，又形容是次晚宴只是「民間聚會」。不過，昨晚獲多名建制議員「捧場」，民建聯何俊賢就送本地雞，稱出席晚宴是體現「制度自信」，愛國者治港制度下產生的議員都應該得到支持。黨總幹事韓劍德表示，現籌得6位數字捐款，總額仍在統計中。</p>
 <p><strong>兩應邀官員「甩底」 狄志遠：民間聚會</strong></p>
 <p>政黨晚宴以往都會邀請政府官員，不過全體問責官員早前就表明不會出席新思維晚宴。原本將應邀出席的消防處副處長（行動）黃鎮業及特首辦總經理潘志謙，昨日早上亦臨時「甩底」，有事不能出席。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/V2G52ojeS3" title="無標題"><img src="https://live.staticflickr.com/65535/52778006833_981d73eaf1_b.jpg" alt="無標題" /></a><br /><em>左至右：黃俊瑯、狄志遠、崔定邦狄志遠</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/V2G52ojeS3" title="無標題"><img src="https://live.staticflickr.com/65535/52778006833_981d73eaf1_b.jpg" alt="無標題" /></a><br /><em>左至右：黃俊瑯、狄志遠、崔定邦</em></p>
 <p>狄志遠表示，官員在議會上與他有傾有講，不認為新思維被孤立，無須聯想到政治層面，又稱官員拒邀「唔似係因為『家規』唔嚟」。他又指，不會因此感到失望，形容是次晚宴為「民間聚會」。</p>
 <p><strong>何俊賢為晚宴捐雞 稱出席是體現「制度自信」</strong></p>
 <p>晚宴在太古城康蘭居ClubONE 時尚康山舉行，筵開20席。雖然晚宴見不到官員蹤影，但得到多名建制派議員「捧場」，包括民建聯陳仲尼和何俊賢、勞聯周小松和林振昇、經民聯陸瀚民，以及旅遊界姚栢良。</p>
