--- a/_posts/2023-03-29-INMEDIA-初選47人案-趙家賢-戴耀廷-風雲計劃-引領-本土抗爭派素人參選-爭區議會主導權營造-憲制抗爭.html
+++ b/_posts/2023-03-29-INMEDIA-初選47人案-趙家賢-戴耀廷-風雲計劃-引領-本土抗爭派素人參選-爭區議會主導權營造-憲制抗爭.html
@@ -9,22 +9,21 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/2023032911.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>資料圖片</em></p>
-<p><font color="red">【獨媒報導】</font>47人涉組織及參與民主派初選，被控「串謀顛覆國家政權」罪，16人不認罪，今（29日）踏入審訊第34天。第二名控方證人趙家賢今正式作供，提及戴耀廷2018年提倡「風雲計劃」，以「向政府抗爭的政治理念行先」來尋找「有志之士」填滿區議會「白區」，旨在取得區議會主導權，將地區事務「政治化」並將撥款用於民主工作，及取得特首選委會議席，指戴當時已從區議會「着手」，開始營造「憲制抗爭」的概念。</p>
+<p><font color="red">【獨媒報導】</font>47人涉組織及參與民主派初選，被控「串謀顛覆國家政權」罪，16人不認罪，今（29日）踏入審訊第34天。第二名控方證人趙家賢今正式作供，提及戴耀廷2018年提倡「風雲計劃」，以「向政府抗爭的政治理念行先」來尋找「有志之士」填滿區議會「白區」，旨在取得區議會主導權，將地區事務「政治化」並將撥款用於民主工作，及取得特首選委會議席。趙指想讓法庭知道，戴當時已從區議會「着手」，開始營造「憲制抗爭」的概念。</p>
 <p>趙續指，戴「引領」了很多本土抗爭派政治素人參選，並在反修例民怨下大勝，惟他們漠視區議會傳統、「口號式政治表態居多」，令議會變得「標籤化、民粹化、口號式」並帶入立法會選舉，趙認為戴從2018年起將該種形態「慢慢注入，然後『有機地』發展咗出嚟」。法官問戴耀廷推「35+」，是否希望將區選的成功「複製（copy）」？趙先稱「我唔會話係抄咗」，但指戴耀廷乘勢以其作為「大學者、大文豪」的做法去寫文章等，令形勢在立法會再進一步，惟趙其後改口同意。趙作供期間，不時有被告皺眉、搖頭和發笑。</p>
 <p><strong>趙家賢開始作供 以基督教宣誓</strong></p>
 <p>第二名控方證人、同案被告趙家賢原定昨天開始作供，惟因法官陳仲衡身體不適押後至今。陳仲衡今步出時沒有配戴口罩，精神不俗，在延伸庭觀看直播的被告稱：「無戴口罩！」，而法官陳慶偉則有戴口罩。</p>
 <p>今早10時04分，身穿黑色運動外套、深藍色長褲的趙家賢在3名懲教護送下步入法庭，他面無表情，步履略為緩慢，其後手舉聖經以基督教宣誓，並除下繫在頸上的口罩開始作供。趙作供期間大部分時間微微低頭，語速緩慢、聲線微弱。在趙出庭時，正庭的被告均注視着他，延伸庭的被告亦專心觀看螢幕；趙宣誓時，部分延伸庭被告發笑，包括黃之鋒及吳敏兒。</p>
 <p><strong>民主動力負責協調民主派參選 趙家賢及鍾錦麟任正副召集人</strong></p>
 <p>主控萬德豪其後開始主問。他先問趙家賢是否於2021年6月認罪，趙同意，庭上被告均面露疑惑（萬在小休後糾正應是2022年6月，趙確認）。趙其後同意，他在香港獲得社會科學的學位，再取得公共行政碩士及博士。他在2004年加入民主黨，2007年參選區議會並當選，其後在2011、2015及2019年連任。趙2020年時為東區區議會副主席，也仍然是民主黨黨員。</p>
-<p>區確認，他於2020年是民主動力的召集人。趙確認民動於2002年成立，是主要負責泛民主派的協調的非政府組織，曾多次協調民主派參與立法會及區議會選舉，推動香港政制民主化改革。民動2016年至2018年負責人包括他和鍾錦麟等，直至2020年由召集人到司庫的成員均沒改變，而被告譚文豪和尹兆堅至2020年亦是執委會成員。</p>
+<p>趙確認，他於2020年是民主動力的召集人，並指民動於2002年成立，是主要負責泛民主派的協調的非政府組織，曾多次協調民主派參與立法會及區議會選舉，推動香港政制民主化改革。民動2016年至2018年負責人包括他和鍾錦麟等，直至2020年由召集人到司庫的成員均沒改變，而被告譚文豪和尹兆堅至2020年亦是執委會成員。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/eJZ1J0v3wk" title="無標題"><img src="https://live.staticflickr.com/65535/49986338228_e12f05f930_c.jpg" width="800" alt="無標題" /></a><br /><em>西貢區議會前主席鍾錦麟（資料圖片）</em></p>
-<p>趙表示，民主動力是一個「小型組織」，對外講法則是「蚊型組織」，有一名總幹事，一般是半職身分，工作量大時會變為全職；並會按工作量決定聘請多少兼職同事。趙表示，2020年時任總幹事為黎敬輝，負責整體民動的各項工作，小至撰寫會議紀錄，大至大項目的行政統籌，各方面都會處理到，若他請假則由兼職員工處理。</p>
-<p>就召集人的工作，趙指是領導整個組織和主持開會，且因民動屬蚊型組織，很多時對外工作是與職員分工。被問職員是否向趙家賢負責，趙指「大致上係」，但他多數是透過總幹事去管理整個團隊，並指黎敬輝在非開會事宜是向他負責，但開會時則向民動執委會所有委員負責。</p>
+<p>趙表示，民主動力是一個「小型組織」，對外講法則是「蚊型組織」，有一名總幹事，一般是半職身分，工作量大時會變為全職；並會按工作量決定聘請多少兼職同事。趙表示，2020年時任總幹事為黎敬輝，負責各項行政工作，小至撰寫會議紀錄，大至大項目的行政統籌，若他請假則由兼職員工處理。</p>
+<p>就召集人的工作，趙指是領導整個組織和主持開會，且因民動屬蚊型組織，很多時對外工作是與職員分工。被問職員是否向趙家賢負責，趙指「大致上係」，但他多數是透過總幹事去管理民動秘書處及整個兼職團隊，並由秘書處負責聘請兼職員工。趙又指，黎敬輝在非開會事宜是向他負責，會向他匯報，作為其直屬上司的趙亦會給他指示；但開會時黎則向民動執委會所有委員負責。</p>
 <p><strong>趙家賢指鍾錦麟為其副手 望安排鍾承接其位置</strong></p>
 <p>法官李運騰問及民動開會次數，趙指通常兩三個月開一次，但疫情期間很多會議改期或延期，他就會直接諮詢副召集人鍾錦麟。區在李追問下，指該情況應在2020年1月開始，而且整個2020年情況都是如此。被問鍾的角色，趙解釋民主動力2003年區選起已主力區議會選舉協調工作，他會與鍾錦麟分工，趙負責香港島和九龍，鍾則負責新界地區。</p>
-<p>法官李運騰問，鍾是否向趙負責，趙指「我諗唔係用負責嘅字眼」，指鍾是「輔助」他。李問是否即鍾是其下屬？趙指「我諗用副手會正確啲」。李再問鍾是否第二負責人，趙指他本身想安排鍾承接召集人位置，同意是他指定的承接人（desinated successor）。李再問，趙是否即訓練鍾任承接人，並給他指導？趙指「我唔敢用訓練……係等多啲時間去適應」，又指二人是交流用一個最好嘅方法去做嘢，「我唔敢去講到係指導」。在延伸庭的黃之鋒聞後發笑。</p>
-<p>趙同意，會與鍾錦麟討論工作。被問總幹事是否一樣，趙指有不同，因總幹事是受薪，惟副召集人均與他一樣用義工身分營運組織，「我同鍾錦麟都係組織嘅義工嚟」。趙續指，他作為召集人就是「睇住」總幹事帶領的民動秘書處工作，「係我睇住個總幹事，然後就係佢去管理個秘書處」，而聘請兼職員工也是由秘書處管理。</p>
-<p>趙同意，與黎敬輝經常討論民動工作，並會給予黎指示，因趙是其直屬上司，黎亦會向他匯報。至於鍾錦麟，趙指他「好尊重召集人」，會給予趙意見及商談出最好的做事方式，趙就作最終決定如何指示職員處理。至於協調工作，趙指鍾協調後會向他匯報，「我哋都緊密聯繫處理返工作」。</p>
+<p>法官李運騰問，鍾是否向趙負責，趙指「我諗唔係用負責嘅字眼」，指鍾是「輔助」他。李問是否即鍾是其下屬？趙指「我諗用副手會正確啲」。法庭傳譯主任一度將「副手」譯作「assistant」，陳慶偉提議改為「right hand man」，李則提出是「第二負責人（second in charge）」。趙回應他本身想安排鍾承接召集人位置，同意鍾是他指定的承接人（desinated successor）。李再問，趙是否即訓練鍾任承接人，並給他指導？趙指「我唔敢用訓練……係等多啲時間去適應」，又指二人是交流以最好的方式做事，「我唔敢去講到係指導」。在延伸庭的黃之鋒聞後發笑。</p>
+<p>趙又指，總幹事是受薪，惟副召集人均與他一樣用義工身分營運組織，「我同鍾錦麟都係組織嘅義工嚟」。趙形容鍾「好尊重召集人」，會給予趙意見及商談出最好的做事方式，趙就作最終決定如何指示職員處理；鍾協調後亦會向他匯報，「我哋都緊密聯繫處理返工作」。</p>
 <p><strong>趙家賢指2012年佔中認識戴耀廷 稱戴常與民主派領導層見面「推銷」新想法</strong></p>
 <p>萬德豪其後就「35+」計劃發問。趙確認有聽過該計劃，萬德豪問誰是主要推手（key promoter），趙微微低頭輕聲說：「戴耀廷」，並確認於2012年已因工作關係認識戴。法官李運騰問是否與佔領中環有關，趙同意，並主動補充指2012年戴提出佔中運動，期間他就香港政制發展進行了數次商討日。趙指自己當時為「香港最大間調解組織嘅副會長」，故他找了一些調解員朋友，而他自己亦是認可調解員，因此他與朋友到商討小組擔任促導員（facilitator）。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/14928905008/in/photolist-278z785-278z7AQ-278z8mC-289D2zd-2aeGv7y-2aeGvrb-2aeGvzN-2aeGvJq-2cSD7jQ-2cSD9r5-JyTXrZ-2bNnYhH-2bNnYYH-nueEk5-oHgLyB-oHhofq-oKdtrA-oKdxkW-oKdAa2-p2ES5A-p2EWuC-p2F87u-p6fXDo-p9jSnN-pj4afq-pZS7Rj-tQdYYW-uuDzMS-uuMv8r-y7Ddgh-y7KaVn-z4SwcX-CMufh8-Dxuj4b-S3x6Nd-S9N13t-ToE3Ak-TRPP2U-XzUeyW-YXdbZQ-dZMKfV-dZMKrZ-dZTrjQ-e6xKQ1-eGWzHe-oHgZWE-XCCxRw-YjR4gf-YGhkz3-eGWqVz/" title="DSC_9001"><img src="https://live.staticflickr.com/3915/14928905008_e66e705a7b_c.jpg" width="800" alt="DSC_9001" /></a><br /><em>戴耀廷為「和平佔中」發起人之一（資料圖片）</em></p>
@@ -36,28 +35,32 @@ author: 獨媒報導
 <p>李運騰追問，民主動力主要做哪類型的協調工作，趙舉例指2019年的區議會選舉，他於2017年3月，已與各大政黨地區代表開會做協調工作。被問有誰參與，趙指各大政黨的地區代表都有出席，並有一個全港選區的名單，如果「撞區」，即同一選區A政黨及B政黨均望派人出選的話，民主動力就有一個「大黨讓細黨」的機制。</p>
 <p>趙表示，自2013年至2017年情況都是如此，惟到了2018年開始就有變化，因當時戴耀廷提倡「風雲計劃」，打算就無人參選的選區「搵多啲嘅有志者去出選」，變相與民主動力一直與政黨和政團組織開會協調的模式出現「衝突」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/47446920521/in/photostream/" title="IMG_3081"><img src="https://live.staticflickr.com/7824/47446920521_29ffb4d53a_c.jpg" width="800" alt="IMG_3081" /></a><br /><em>戴耀廷在2019年3月曾聯同其他公民團體舉行記者會，呼籲積極參與區議會選舉</em></p>
-<p>法官李運騰問戴是否想培植（plant）參選人，與以往協調各民主黨派做法不同，趙同意情況不同，解釋一般政黨的地區工作者，會有一段時間在地區「深耕細作」，惟戴的做法是找有志之士，「當然係搵佢向政府抗爭嘅政治理念行先」，此時黃之鋒發笑。趙續指，區議會選區有400多個，傳統民主派政黨的深耕細作模式不能覆蓋全部選區，而戴的計劃就是找「有志之士或認同戴耀廷信念的人士」，派人填滿沒有民主派政黨發展的「白區」，令民主派在2019年區議會選舉可贏取更多議席，挑戰本身會自動當選的建制派。</p>
+<p>法官李運騰指民動以往協調各民主黨派，但戴則是想在無人參選的地區培植（plant）參選人，趙稱「冇錯，法官大人」，解釋一般政黨的地區工作者，會有一段時間在地區「深耕細作」，惟戴的做法是找有志之士，「當然係搵佢向政府抗爭嘅政治理念行先」，此時黃之鋒發笑。趙續指，區議會選區有400多個，傳統民主派政黨的深耕細作模式不能覆蓋全部選區，而戴的計劃就是找「有志之士或認同戴耀廷信念的人士」，派人填滿沒有民主派政黨發展的「白區」，令民主派在2019年區議會選舉可贏取更多議席，挑戰本身會自動當選的建制派。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0219VqJ6Gc" title="IMG_2529"><img src="https://live.staticflickr.com/65535/49116499913_ff0b77fb61_c.jpg" width="800" alt="IMG_2529" /></a><br /><em>民主派在2019年區議會選舉大勝</em></p>
 <p><strong>趙指戴望將地區事務「政治化」、取區議會過半議席選特首 開始營造以憲制抗爭概念</strong></p>
-<p>李運騰問戴最終是否成功，黃之鋒發笑。趙指「我講多少少內情先」，解釋戴曾公開表示望取得各個區議會過半數的主導權，令政府社區參與撥款可運用在民主陣營認為合適的公民社會工作上，推動公民社會，特別是民主概念的工作；此外，取得區議會議席過半數後，在「未完善選舉制度之前」，民主派區議員便可取得特首選委會內由區議員互選的一百多個議席。</p>
+<p>李運騰問戴最終是否成功，黃之鋒再發笑。趙指「我講多少少內情先」，解釋戴曾公開表示望取得各個區議會過半數的主導權，令政府社區參與撥款可運用在民主陣營認為合適的公民社會工作上，推動公民社會，特別是民主概念的工作；此外，取得區議會議席過半數後，在「未完善選舉制度之前」，民主派區議員便可取得特首選委會內由區議員互選的一百多個議席。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/72zTEy4T21" title="無標題"><img src="https://live.staticflickr.com/65535/49342899521_d120831c0a_c.jpg" width="800" alt="無標題" /></a><br /><em>趙家賢在2020年區議會換屆後，出任東區區議會副主席</em></p>
-<p>法官陳慶偉指趙提及填白區、取得選委會議席及撥款權等，問趙可否再解釋，趙稱「係，多謝法官大人」，並解釋戴耀廷當時「想將當時區議會選舉，講緊地區事務嘅野，透過佢嘅推動，係將佢政治化」，除了使用政府撥款將地區文娛活動變成是推動民主的活動外，同時循憲制角度，戴認為區議會取得過半數議席，便可獲得當時港九新界的特首選委會議席。趙並說：「我想要帶出呢個位比法庭知道呢，就係戴耀廷當時已經係想喺區議會着手，將佢嗰個用憲制做抗爭嘅概念已經開始營造出嚟」，趙補充即是在2018至2019年的時候，鄒家成聞言搖頭。</p>
-<p>趙同意，2019年民主黨在區議會取得大勝，陳慶偉問故趙指戴的想法是在2019年前發生？趙答「佢係一步步去營造呢個嘅情況出嚟」，鄒家成再搖頭。趙並指「我想講嘅就係，18、19年嘅時候我同佢會喺好多傳媒嘅訪問係有針鋒相對」，此時吳政亨發笑，鄒亦再搖頭。</p>
+<p>法官陳慶偉指趙提及填白區、取得選委會議席及撥款等，問趙可否再解釋，趙稱「係，多謝法官大人」，並解釋戴耀廷當時「想將當時區議會選舉，講緊地區事務嘅野，透過佢嘅推動，係將佢政治化」，除了將地區文娛活動的撥款變成是推動民主的活動外，同時循憲制角度，戴認為區議會取得過半議席，便可獲得當時港九新界的特首選委會議席。趙並說：「我想要帶出呢個位比法庭知道呢，就係戴耀廷當時已經係想喺區議會着手，將佢嗰個用憲制做抗爭嘅概念已經開始營造出嚟」，趙補充是指2018至2019年的時候，鄒家成聞言搖頭。</p>
+<p>法官陳慶偉問，因此2019年民主派在區議會取得壓倒性勝利？區同意。陳再問，故趙指戴的想法是在2019年前出現？趙答「佢係一步步去營造呢個嘅情況出嚟」，鄒家成再搖頭。</p>
 <p><strong>趙指戴耀廷引領本土派政治素人出選 令議會文化起變化 「口號式政治表態居多」</strong></p>
-<p>趙續指，民主動力當時獲各個傳統民主派政黨授權「睇住區議會選舉地區嘅工作」，而他們深信每個選區「一定要擺時間落去發展、服務市民」，若只是短期派人「空降選區」會對社區發展不利，因地區工作者不會懂得如何在社區協作和與不同團體溝通。趙續指，戴的風雲計劃「雖然佢最後嘅人數唔太多，但佢引領咗好多本土抗爭派嘅政治素人都有出選」，而當時政治大勢是反修例事件有很大民怨，故民主陣營在區選取得大勝，「喺之後嘅區議會，以及喺地區嘅論政、議政、表達意見嘅文化係有好大嘅轉變」。</p>
-<p>趙解釋，在未有大勝之前，民主派議員的意見與建制派時有相撞，「但係我哋係地區為本」，故是以對議案項目對社區有最大利益作為區議會討論基礎。但到了2020年，即新一屆區議會上任後，「整個地區議會嘅文化係有好大嘅變化，新當選嘅，可能係由風雲計劃、或者係由本土抗爭派嘅一啲政治素人當選，佢哋嘅取態係好難去處理。」趙指，「佢哋係要口號式政治表態居多」，而且針對每個社區都有的傳統文化活動撥款，若全部由建制派舉辦，他們就會以派別分野「完全予以否決」。</p>
+<p>趙續指，「我想講嘅就係，18、19年嘅時候我同佢（戴耀廷）會喺好多傳媒嘅訪問係有針鋒相對」，此時吳政亨發笑，鄒亦再搖頭。趙解釋，民主動力當時獲各個傳統民主派政黨授權「睇住區議會選舉地區嘅工作」，而他們深信每個選區「一定要擺時間落去發展、服務市民」，若只是短期派人「空降選區」會對社區發展不利，因地區工作者不會懂得如何在社區協作和與不同團體溝通。</p>
+<p>趙續指，戴的風雲計劃「雖然佢最後嘅人數唔太多，但佢引領咗好多本土抗爭派嘅政治素人都有出選」，而當時政治大勢是反修例事件有很大民怨，故民主陣營在區選取得大勝，「喺之後嘅區議會，以及喺地區嘅論政、議政、表達意見嘅文化係有好大嘅轉變」。</p>
+<p>趙解釋，在未有大勝之前，民主派議員的意見與建制派時有相撞，「但係我哋係地區為本」，故會以議案對社區有最大利益作為討論基礎。但到了2020年，即新一屆區議會上任後，「整個地區議會嘅文化係有好大嘅變化，新當選嘅，可能係由風雲計劃、或者係由本土抗爭派嘅一啲政治素人當選，佢哋嘅取態係好難去處理。」趙指，「佢哋係要口號式政治表態居多」，而且就社區傳統文化活動的撥款，若全部為建制派提出，他們就會以「派別分野」而「完全予以否決」。</p>
 <p><strong>趙指區議會變得「民粹化、口號式」、本土派素人漠視傳統 指是由戴耀廷注入及有機發展</strong></p>
-<p>陳慶偉指他不太明白，問趙是否想表達區議會項目被「政治化」，並會否決建制派提出的社區項目，區指「係嘅法官大人，我當時都觀察到係有呢個情況發生」。陳續問，即區議會變得不理智和政治化、沒有建設性，討論結果只是取決於政治思想？趙指「大致上係嘅法官大人」，並補充「本身做開地區議員嘅民主派政黨呢，並不是以呢一種嘅方式行事嘅」，但當整個議會文化「變到咁嘅時候，係好難去協作」。趙指，尤其是一些本土抗爭和政治素人，他們在各區議會的人數「仲多過」傳統民主派政黨，「所以係只可以係順住個形勢而行咁解」。</p>
+<p>陳慶偉指他不太能跟上，問趙是否想表達本土派將區議會「政治化」，並會否決建制派提出的社區項目？區指「係嘅法官大人，我當時都觀察到係有呢個情況發生」。陳續問，即區議會變得不理智和政治化、沒有建設性，討論結果只是基於各派的意識形態？趙指「大致上係嘅法官大人」，並補充「本身做開地區議員嘅民主派政黨呢，並不是以呢一種嘅方式行事嘅」，但當整個議會文化「變到咁嘅時候，係好難去協作」。趙指，尤其是一些本土抗爭和政治素人，他們在各區議會的人數「仲多過」傳統民主派政黨，「所以係只可以係順住個形勢而行咁解」。</p>
 <p>趙又舉例，他本身是東區區議會副主席，在協助主席處理會議進行時，本身做法是由主席或副主席讓議員提問，再到部門回應，「其實所有對答唔係議員直接問個官員、官員直接回答，係全部經主席去安排 」，故議員或官員發言後，也會有「多謝主席」的做法，「呢個無論係舊陣時乜嘢黨派都好，都會繼續秉承嘅一個做法」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7ke1x69965" title="無標題"><img src="https://live.staticflickr.com/65535/49614422093_eb305ed7d5_c.jpg" width="800" alt="無標題" /></a><br /><em>2020年換屆後的東區區議會</em></p>
 <p>惟趙指，到了2020年新一屆區議會，「某一啲都係政治素人或者都係本土新當選嘅，佢哋都完全……佢完全漠視咗呢一樣嘢」，此時何桂藍發笑，曾任東區區議員的鄭達鴻和李予信也對視而笑。趙續指，「佢哋對於一啲本身制度嘅傳統係不會加以重視」，而「整體呢個嘅文化」，加上議會內「標籤化、民粹化、口號式」的情況，「其實就會慢慢帶咗去會覺得要喺立法會選舉嘅時候，都應該有一個模式，都會慢慢個民意係偏向咗用咗呢個嘅方式去處理」。此時旁聽的前元朗區議會主席黃偉賢也發笑。</p>
 <p>趙並指，「喺我個角度去睇，係戴耀廷喺18年開始，係將呢一種嘅形態去慢慢注入咗，然後『有機地』發展咗出嚟」，此時李予信邊笑邊搖頭，余慧明也以口型做出「吓」。</p>
 <p><strong>趙指本土派素人變得「心雄」、戴乘勢以「大學者大文豪」推動  同意戴「35+」望複製區選成功 </strong></p>
-<p>趙續指，故剛才主控問及「35+」，「就會慢慢個討論，就變咗一定要係集中票源去令到立法會有過一半數都係支持民主價值嘅人士」，何啟明皺眉。趙並指，尤其很多本土抗爭派和政治素人，他們可能只是落區兩三個月就高票當選，「因為係乘住當時反修例運動嗰啲對政府嘅不滿啦，所以變咗佢哋會……我哋俗語所講就係『心雄』咗」。法庭傳譯一度譯作「courage」，趙補充是「雄心壯志」，萬德豪則稱是「ambitious」。陳慶偉則指，是「野心大咗，not 雄心壯志」，指「雄心壯志」是正面的形容，「野心」則可以是好或壞，趙答「多謝法官大人」。</p>
+<p>趙續指，故剛才主控問及「35+」，「就會慢慢個討論，就變咗一定要係集中票源去令到立法會有過一半數都係支持民主價值嘅人士」，何啟明皺眉。趙並指，尤其很多本土抗爭派和政治素人，他們可能只是落區兩三個月就高票當選，「因為係乘住當時反修例運動嗰啲對政府嘅不滿啦，所以變咗佢哋會……我哋俗語所講就係『心雄』咗」。法庭傳譯一度譯作「courageous」，趙補充是「雄心壯志」，萬德豪則稱是「ambitious」。陳慶偉則指，是「野心大咗」而非「雄心壯志」，指「雄心壯志」是正面的形容，「野心」則可以是好或壞，趙答「多謝法官大人」。</p>
 <p>陳慶偉續問，戴耀廷是否希望將區選的成功「複製（copy）」？趙答「我唔會話係抄咗」，又指「其實當時佢係整個形勢大勝咗之後，佢就乘勢以佢作為『大學者、大文豪』嘅一啲做法，而佢就去寫文章等等，就去將整個形勢就攞嚟更加進一步去推，咁我哋就可以開始喺立法會再進一步啦」，趙提及「大學者、大文豪」時，多名被告面露愕然，有人發笑。趙並指，「嗰陣時我冇同佢有咩特別嘅辯論」，因2019年11月他耳朵受襲休養，過了區選，區議會事務亦開始繁忙。</p>
-<p>趙續指，故當時「整個政治格局或整個政治論述方面，我同埋民主陣營喺當時都冇特別參與」，而開始有「35+」的說法時，戴耀廷就繼續順着「呢個我叫做民意啦，因為當時社會氣氛就係希望立法會過半，做出一啲改變」，就開始形成要在立法會選舉協調取得「35+」。陳慶偉再次問，故「35+」的想法，就是戴希望複製區選的成功？趙答「冇錯法官閣下」，並指除了社會形勢，戴耀廷「佢做嘅一啲步驟，令到成個形勢做成」。</p>
+<p>趙續指，故當時「整個政治格局或整個政治論述方面，我同埋民主陣營喺當時都冇特別參與」，而開始有「35+」的說法時，「咁戴耀廷就繼續順住呢個，我叫做『民意』啦，因為當時社會氣氛就係希望立法會過半，做出一啲改變」，就開始形成要在立法會選舉協調取得「35+」。陳慶偉再次問，故「35+」的想法，就是戴希望複製區選的成功？趙答「冇錯法官閣下」，並指除了社會形勢，戴耀廷「佢做嘅一啲步驟，令到成個形勢做成」。</p>
 <p>案件下午續審。</p>
-<p><strong>審訊第三十三日</strong><br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E5%88%9D%E9%81%B847%E4%BA%BA%E6%A1%88%E3%80%91%E8%B6%99%E5%AE%B6%E8%B3%A2%E5%8E%9F%E5%AE%9A%E4%BB%8A%E4%BD%9C%E4%BE%9B-%E6%83%9F%E5%9B%A0%E6%B3%95%E5%AE%98%E9%99%B3%E4%BB%B2%E8%A1%A1%E8%BA%AB%E9%AB%94%E4%B8%8D%E9%81%A9%E6%8A%BC%E5%BE%8C">【初選47人案】趙家賢原定今作供 惟因法官陳仲衡身體不適押後</a></p>
+<p><strong>審訊第三十四日</strong><br />
+【初選47人案】趙家賢：戴耀廷「風雲計劃」「引領」本土抗爭派素人參選 爭區議會主導權營造「憲制抗爭」</p>
+<p><strong>審訊第三十三日</strong><br />
+【初選47人案】<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E5%88%9D%E9%81%B847%E4%BA%BA%E6%A1%88%E3%80%91%E8%B6%99%E5%AE%B6%E8%B3%A2%E5%8E%9F%E5%AE%9A%E4%BB%8A%E4%BD%9C%E4%BE%9B-%E6%83%9F%E5%9B%A0%E6%B3%95%E5%AE%98%E9%99%B3%E4%BB%B2%E8%A1%A1%E8%BA%AB%E9%AB%94%E4%B8%8D%E9%81%A9%E6%8A%BC%E5%BE%8C">趙家賢原定今作供 惟因法官陳仲衡身體不適押後</a></p>
 <p><strong>審訊第三十二日</strong><br />
 【初選47人案】<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E5%88%9D%E9%81%B847%E4%BA%BA%E6%A1%88%E3%80%91%E6%8E%A7%E6%96%B9%E6%8C%87%E5%89%8D%E8%A7%80%E5%A1%98%E5%8D%80%E8%AD%B0%E6%9C%83%E4%B8%BB%E5%B8%AD%E7%82%BA%E5%85%B1%E8%AC%80%E8%80%85-%E5%8D%80%E8%AB%BE%E8%BB%92%E5%AE%8C%E6%88%90%E4%BD%9C%E4%BE%9B">控方指前觀塘區議會主席為共謀者 區諾軒完成作供</a></p>
 <p><strong>審訊第三十一日</strong><br />
