--- a/_posts/2023-02-25-VOCUS-俄烏戰爭一年總檢討-5-僵持-你察覺我的察覺-我察覺你的察覺.html
+++ b/_posts/2023-02-25-VOCUS-俄烏戰爭一年總檢討-5-僵持-你察覺我的察覺-我察覺你的察覺.html
@@ -34,7 +34,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">換句話說就是在現代情報收集能力下，要發起規模很大的裝甲作戰，全世界的人事前都會知道，那就沒有突襲的意義。弱勢的一方不會乖乖等著被包圍，要不就是加強防禦工事、增加砲兵支援、或乾脆後撤避其鋒銳。</div>
 <div class="draft-block draft--p left">然後呢，雙方都在集結裝甲兵力的同時，不停的在前線上加強步兵防禦，挖掘各種工事，造成進攻方得要集結更大規模的裝甲兵力才能打穿。沒完沒了，各位應該發現又跟上段一樣，簡直就是一次大戰的壕溝戰情景重演。</div>
 <div class="draft-block draft--p left">是的，這就是消耗戰，只能在不可避免的地方，逐次投入兵力消耗，儘量造成敵軍更大傷亡。而在這當中最漂亮的反擊，當屬去年九月烏克蘭解放<a href="https://zh.wikipedia.org/zh-tw/2022%E5%B9%B4%E7%83%8F%E5%85%8B%E8%98%AD%E5%93%88%E7%88%BE%E7%A7%91%E5%A4%AB%E5%8F%8D%E6%94%BB" target="_blank" class="draft--a">哈爾可夫</a>一帶的攻勢。烏克蘭集結相當多的輕型車輛，突襲打穿薄弱的俄軍防線，截斷了前方俄軍陣地的補給線，同時威脅到後方公路生命線，迫使俄軍全線後撤。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/jyRQTZYQTNY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/jyRQTZYQTNY"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-50m07">俄軍尾大不掉的戰線，讓烏軍找到機會單點突破</h3>
 <div class="draft-block draft--p left">等等，剛剛不是說，集結會被發現嗎？怎麼烏克蘭可以做到。</div>
 <div class="draft-block draft--p left">這與其說是戰術上的漂亮，不如說是戰略上的成功重心轉移，大致上的狀況，就是烏克蘭把重型部隊放到南方進攻赫爾松，俄軍也知道，所以同樣把坦克移往南方。</div>
@@ -42,8 +42,6 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">烏克蘭利用重心往南方轉移的同時，調集機動性高的輕型車輛，採取穿越防線薄弱處，深入切斷補給線的攻勢。</div>
 <div class="draft-block draft--p left">接下來就回到第一二篇的老問題，當俄軍此處有1萬人，據點而守當然沒問題，但補給線被截斷後就完蛋，那要反過頭打通後方補給線，需要多少人？烏軍已經有數千兵力突破，各位想想就知道，沒有重型裝甲的協助，單憑輕裝部隊可以反攻兵力相當，甚至更多的烏克蘭軍隊嗎？</div>
 <div><h3><a href="https://vocus.cc/article/63fa3f1afd89780001de1cab">俄烏戰爭一年總檢討（1）-兵力，俄羅斯打不贏的原因｜方格子 vocus</a></h3><span>這次的每週一定期雜談，將要談已經一週年的俄烏戰爭，從俄國入侵烏克蘭開始到現在，這一年到底發生了什麼事，又俄國為何打算入侵，如何算計跟計算失敗。 由於大多數有研究的專家跟軍迷都知道詳情，筆者就不多說大家知道的部分，將著重於沒有相關底子的一般人，能夠簡易上手的方向跟說法。 以下是第一篇，先不寫俄國入侵的理由，留到中段政治性的部分再提，前段只談較純粹屬於軍事面的部份。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F69b4c833-cb4d-45ee-9aaf-d5ce30909b4b.jpg%26width%3D1200%26sign%3DE-7OkybhzMzrQrnDkm1a7jlqjrd3J-bZSGdlQXYaXh4&amp;width=550&amp;sign=jzmfMA7qwS0eAcuBs97Vwv2EiKo06GgRSOI3TSNwWW4"></div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/63fa3f53fd89780001de1d6a">俄烏戰爭一年總檢討（2）：政治，打不贏也得出兵的道理｜方格子 vocus</a></h3><span>簡單結論就是，這16萬地面部隊不可能達成徹底擊敗烏克蘭軍隊，同時又要進行佔領任務（擇其一都極難達成）。原因又回到兵力不足的老問題，所以只能「擊退」、「暫時擊敗」，如果要包圍、殲滅一個地區如烏東的數萬兵力，就得全力出擊，而不是分散成四個方向。 這場入侵，會被解讀為情報失敗，理由也非常簡單，上一篇說的兵力不足，這點軍隊是不可能達成俄羅斯想要的政治目標。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F7ea639ce-2ff0-4909-b209-579dcc5ad082.jpg%26width%3D1200%26sign%3DC1tIJNdLoT_v55Buq8YgZi20tu6rxbVx1CyylBgJhV8&amp;width=550&amp;sign=dOYS_nfTPXWmwqKMq1euRrSdh2IcQsmcXo19lVP2v_U"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">既然無法撐住守住，後撤就是唯一一條路，俄軍並不笨。</div>
 <div class="draft-block draft--p left">問題出在，我們估算俄軍戰力都錯了，這是政治面造成的問題。許多俄迷總覺得俄軍有強大戰力，就是出在過於高估俄軍戰力，太相信帳面量化數字，忽略其他面帶來的問題。</div>
