--- a/_posts/2023-03-29-INMEDIA-談混亂中努力生活的喜劇-今晚-omakase夜唔夜-演員-一齊笑下好苦嘅嘢.html
+++ b/_posts/2023-03-29-INMEDIA-談混亂中努力生活的喜劇-今晚-omakase夜唔夜-演員-一齊笑下好苦嘅嘢.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/omakase%201280.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>由「同流」製作的喜劇《今晚，Omakase夜唔夜》，講述一間經營逾26年的餐廳，舊東主驀然不遲而別，新老闆疑似混入顧客之中。一眾員工為保住飯碗，一邊廂費神取悅身份不明的新東主，另一邊廂賣力滿足客人層出不窮的無理要求，場面漸漸失去控制，陷入槍林彈雨之境……</p>
+<img src="https://www.inmediahk.net/files/column_images/omakase%201280.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>由「同流」製作的喜劇《今晚，Omakase夜唔夜》，講述一間經營逾26年的餐廳，舊東主驀然不辭而別，新老闆疑似混入顧客之中。一眾員工為保住飯碗，一邊廂費神取悅身份不明的新東主，另一邊廂賣力滿足客人層出不窮的無理要求，場面漸漸失去控制，陷入槍林彈雨之境……</p>
 <p>喜劇旨在令人發笑，但在當下社會，如何令人發自内心地笑出來？導演認為笑點源於共鳴：「個情況好差好壞，但一班人好努力咁生存緊。」演員曾永舜則提到，近年尤其需要喜劇，將積攢的壓力好好釋放：「喺香港生活都不簡單，好似要有啲幽默感，去笑下一啲好苦嘅嘢，然後再去面對。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/JdA39024wS" title="無標題"><img src="https://live.staticflickr.com/65535/52772109557_51bc7c6568_b.jpg" width="1024" alt="無標題" /></a><br /><em>《今》主演演員，左起：李肇桐（小龍）、張衍彤、曾永舜（細粒）、歐啓發（發仔）、伍卓輝（雞仔）</em></p>
 <p><strong>乜都有啲嘅時候 其實我哋係咩？</strong></p>
