--- a/_posts/2023-03-30-INITIUM-香港研究立法打击-假新闻-国安法下的新责任-如何保障新闻自由和人权.html
+++ b/_posts/2023-03-30-INITIUM-香港研究立法打击-假新闻-国安法下的新责任-如何保障新闻自由和人权.html
@@ -5,7 +5,7 @@ date: 2023-03-30 14:59:00.000000000 +00:00
 link: https://theinitium.com/article/20230331-hongkong-combating-false-information/
 categories: initium
 tags: blog
-author: 袁慧妍
+author: 特约撰稿人 林泓宣 发自新加坡
 ---
 
 <p>「掌握公权力的机构往往会指控传媒是反对派或在撒谎、有不可告人的政治目的。这种说法破坏了公众对新闻业作为公共监督机构的信任。」</p><p>特约撰稿人 林泓宣 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230331-hongkong-combating-false-information/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2020/09/9e6c48a4484b4cab87c4cc8ebdd3f27e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2020年7月21日元朗，警方在721一周年期间举起紫旗，驱逐在商场内的示威者，大批媒体拍摄。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
