--- a/_posts/2023-03-30-PQ-北檢認證-深圳立訊非法滲透台上市公司宣德-經濟部投審會卻還在睡.html
+++ b/_posts/2023-03-30-PQ-北檢認證-深圳立訊非法滲透台上市公司宣德-經濟部投審會卻還在睡.html
@@ -20,7 +20,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/f7e6c259-20181114140040_4029.jpeg" alt="" class="wp-image-131280" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/f7e6c259-20181114140040_4029.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/f7e6c259-20181114140040_4029-300x241.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/f7e6c259-20181114140040_4029-768x616.jpeg 768w" sizes="(max-width: 544px) 100vw, 544px" /><figcaption>深圳立訊精密公司董事長王來春（右），是中國紅色供應鏈代表。<br>立訊同時也是中國華為的重要供應商（圖／立訊精密）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/f7e6c259-20181114140040_4029.jpeg" alt="" class="wp-image-131280" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/f7e6c259-20181114140040_4029.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/f7e6c259-20181114140040_4029-300x241.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/f7e6c259-20181114140040_4029-768x616.jpeg 768w" sizes="(max-width: 544px) 100vw, 544px" /><figcaption>深圳立訊精密公司董事長王來春（右），是中國紅色供應鏈代表。<br>立訊同時也是中國華為的重要供應商（圖／立訊精密）</figcaption></figure></div>
 
 
 
