--- a/_posts/2023-03-31-PQ-南韓首度公開-北韓人權報告-北韓公權力為封鎖外界資訊任意剝奪生命.html
+++ b/_posts/2023-03-31-PQ-南韓首度公開-北韓人權報告-北韓公權力為封鎖外界資訊任意剝奪生命.html
@@ -8,15 +8,15 @@ tags: blog
 author: 林貝利
 ---
 
-<p>韓國政府在 3 月 31 日公開統整 500 多名脫北者證詞的《2023 年版北韓人權報告》。指出北韓政權以射殺北韓居民等方式極端打壓人權的核心目的是為了徹底封鎖外部資訊的來源。</p>
+<p>韓國政府在 3 月 30 日宣佈公開統整 500 多名脫北者證詞的《2023 年版北韓人權報告》。韓媒指出北韓政權以射殺北韓居民等方式極端打壓人權的核心目的是為了徹底封鎖外部資訊的來源。</p>
 
 
 
-<p>韓國政府從 2017 年《北韓人權法》制定以來，每年都會發行報告，但考慮到個資外洩和北韓的反彈，此報告一直是非公開的。今年韓國政府將首次公開報告，以讓世人了解北韓的惡劣人權狀況。</p>
+<p>韓國政府從 2016 年《北韓人權法》制定以來，每年都會發行報告，但考慮到個資外洩和北韓的反彈，此報告一直是非公開的。今年韓國政府將首次公開報告，以讓世人了解北韓的惡劣人權狀況。</p>
 
 
 
-<p>根據統一部的說法，報告書篇幅約有 450 頁，由「公民和政治權利」、「經濟、社會和文化權利」、「社會弱勢群體」、「政治犯收容所、韓軍俘虜、綁架受害者和南北分裂家庭」等 4 個章節組成。</p>
+<p>統一部發布的《<a href="https://unikorea.go.kr/books/NKHR/index.html#page=1" target="_blank" rel="noopener">北韓人權報告</a>》，篇幅有 225 頁，由「公民和政治權利」、「經濟、社會和文化權利」、「社會弱勢群體」、「政治犯收容所、韓軍俘虜、綁架受害者和南北分裂家庭」等 4 個章節組成。</p>
 
 
 
@@ -24,7 +24,7 @@ author: 林貝利
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-1024x786.jpeg" alt="" class="wp-image-131347" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-1024x786.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-300x230.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-768x589.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-1536x1178.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c.jpeg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>北韓萬壽臺創作社製作的金日成與金正日的銅像。<br>（圖／Nicor／wiki／CC BY-SA 3.0）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-1024x786.jpeg" alt="" class="wp-image-131347" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-1024x786.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-300x230.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-768x589.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c-1536x1178.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/477ff9ef-3ccea7fc-0e73-43bb-9671-1664f73e659c.jpeg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>北韓萬壽臺創作社製作的金日成與金正日的銅像。<br>（圖／Nicor／wiki／CC BY-SA 3.0）</figcaption></figure>
 
 
 
