--- a/_posts/2023-03-31-INMEDIA-耶穌居里出版自傳記錄港足輝煌時期-簽書會感謝球迷支持.html
+++ b/_posts/2023-03-31-INMEDIA-耶穌居里出版自傳記錄港足輝煌時期-簽書會感謝球迷支持.html
@@ -23,7 +23,7 @@ author: 獨媒報導
 <p>然而，在數個月前，比利在1970年墨西哥世界盃，第三次為巴西捧起世界盃，這對居里來說是頭等大事。畢特利這時候便說，山度士及比利將在12月到港，認為居里絕對能夠入選港聯，屆時便可以與比利同場比賽。在聽到比利的名字後，嘅？居里想也不想，便問「邊度可以簽約」；因為久仰比利，所以便來了曾被譽為遠東足球王國的香港。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4Nr55xo6x0" title="無標題"><img src="https://live.staticflickr.com/65535/52781983594_1b69d65546_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>替港聯反勝佐加頓斯  打救香港獲「耶穌」之名</strong></p>
-<p>「耶穌」居里、「大水牛」華德、「長頸鹿」積奇一起簽約流浪，成為了香港職業足球首批歐洲外援。在自傳中，居里還記得飛機在啟德機場降落的時候，驚訝飛機原來可以和市區的高樓大廈及繁體的街道，距離是可以這麼近。</p>
+<p>「耶穌」居里、「大水牛」華德、「長頸鹿」積奇一起簽約流浪，成為了香港職業足球首批歐洲外援。在自傳中，居里還記得飛機在啟德機場降落的時候，驚訝飛機原來可以和市區的高樓大廈及繁華的街道，距離是可以這麼近。</p>
 <p>對居里來說，1970年還發生了一件大事，他11月首次代表港聯上陣，替球隊反勝瑞典的佐加頓斯3:2，個人包辦一個入球、一個助攻，可說是一戰成名。在自傳中，居里便憶述，球迷將他和隊友從大球場，由加路連山道抬到酒店慶祝，他在派對上更高歌《My Way》一曲，吃了一頓有8個主菜的中式盛宴，足總會長霍英東亦在場。</p>
 <p>翌日有中文報紙的頭條以「耶穌打救香港」，作標題報道賽事，「Jesus save Hong Kong 」，球迷從此知道居里咩料吧，他的外號「耶穌」之名亦由此而來。</p>
 <p><strong>如願與與比利比賽  賽前合照賽後獲球王波衫</strong></p>
